--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/1d/19/26/1d1926a9-c44b-33e6-d54c-ba95f7b40a18/AppIcon-0-0-1x_U007ephone-0-10-0-85-220.png/256x256bb.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/edb04b1d94.js" crossorigin="anonymous"></script>
-    <title>Vite + React</title>
+    <title>Proyecto Banco</title>
   </head>
   <body>
     <div id="root"></div>
